@@ -2,6 +2,7 @@
 
 -- Add module exit fn
 -- Add 3 args on module fn call
+-- Add log level of error output argument on soaf_cmd
 
 [0.9.0]
 
